# cppyy-backend

./: .gitignore  CMakeLists.txt  README.md  README.rst  circleci.py  setup.py
cling/: INSTALL.txt  LICENSE.txt  README.rst  create_src_directory.py  pyproject.toml  setup.py
cling/patches/: 11388.diff  access_protected.diff  alias_template.diff  anon_union.diff  apple.diff  build.diff  clang_printing.diff  classedit_scopes.diff  classrules.diff  cleanup_tstring.diff  cling_update.diff  cpp14.diff  cpp20.diff  cuda102.diff  dep_template.diff  disambiguate.diff  explicit_template.diff  faux_typedef.diff  fix_pch_build.diff  fixinstall.diff  gcc10.diff  gui_cleanup.diff  helpers.diff  improv_load.diff  improv_msg.diff  incomplete_types.diff  lambda.diff  locales.diff  luhelper.diff  mactstring.diff  manylinux1.diff  metacling.diff  msvc.diff  no_inet.diff  no_long64_t.diff  nodeleted.diff  nofastmath.diff  nomacro_expansion.diff  optlevel2_forced.diff  pch.diff  (+28 more)
cling/python/cppyy_backend/: __init__.py  _cling_config.py  _cppyy_generator.py  _genreflex.py  _rootcling.py  _version.py  bindings_utils.py  loader.py
cling/python/cppyy_backend/cmake/: FindCppyy.cmake  FindLibClang.cmake
cling/src/: CMakeLists.txt
cling/src/builtins/zlib/: crc32_cf.c  gzlib.c  gzread.c  gzwrite.c  zconf.h  zutil.h
cling/src/cmake/modules/: CheckCompiler.cmake  RootBuildOptions.cmake  RootCPack.cmake  RootConfiguration.cmake  RootMacros.cmake  SearchInstalledSoftware.cmake  SetUpLinux.cmake  SetUpMacOS.cmake  SetUpWindows.cmake
cling/src/cmake/scripts/: ROOTConfig.cmake.in  compiledata.win32.in
cling/src/config/: Makefile.in  RConfigure.in  root-config.in  rootrc.in  thisroot.bat  thisroot.csh  thisroot.sh
cling/src/core/: CMakeLists.txt
cling/src/core/base/: CMakeLists.txt
cling/src/core/base/inc/: Bytes.h  DllImport.h  LinkDef.h  LinkDef1.h  LinkDef2.h  LinkDef3.h  Match.h  Rtypes.h  RtypesCore.h  RtypesImp.h  TApplication.h  TApplicationImp.h  TBuffer.h  TDatime.h  TDirectory.h  TEnv.h  TError.h  TException.h  TFolder.h  TInetAddress.h  TMD5.h  TMathBase.h  TMemberInspector.h  TNamed.h  TObjString.h  TObject.h  TProcessID.h  TProcessUUID.h  TROOT.h  TRegexp.h  TStorage.h  TString.h  TSysEvtHandler.h  TSystem.h  TThreadSlots.h  TTime.h  TTimeStamp.h  TUUID.h  TUrl.h  TVersionCheck.h  (+2 more)
cling/src/core/base/src/: Match.cxx  String.cxx  Stringio.cxx  TApplication.cxx  TApplicationImp.cxx  TBuffer.cxx  TDatime.cxx  TDirectory.cxx  TEnv.cxx  TError.cxx  TException.cxx  TFolder.cxx  TInetAddress.cxx  TListOfTypes.cxx  TListOfTypes.h  TMD5.cxx  TMathBase.cxx  TMemberInspector.cxx  TNamed.cxx  TObjString.cxx  TObject.cxx  TProcessID.cxx  TProcessUUID.cxx  TROOT.cxx  TRegexp.cxx  TStorage.cxx  TString.cxx  TSysEvtHandler.cxx  TSystem.cxx  TTime.cxx  TTimeStamp.cxx  TUUID.cxx  TUrl.cxx  TVirtualMutex.cxx
cling/src/core/clib/: CMakeLists.txt
cling/src/core/clib/src/: attach.c  keys.c  mmapsup.c
cling/src/core/clingutils/: CMakeLists.txt
cling/src/core/clingutils/res/: RStl.h  TClingUtils.h
cling/src/core/clingutils/src/: RStl.cxx  TClingUtils.cxx  complexLinkdef.h  dequeLinkdef.h  forward_listLinkdef.h  listLinkdef.h  map2Linkdef.h  mapLinkdef.h  multimap2Linkdef.h  multimapLinkdef.h  multisetLinkdef.h  setLinkdef.h  unordered_mapLinkdef.h  unordered_multimapLinkdef.h  unordered_multisetLinkdef.h  unordered_setLinkdef.h  valarrayLinkdef.h  vectorLinkdef.h
cling/src/core/cont/: CMakeLists.txt
cling/src/core/cont/inc/: LinkDef.h  TArray.h  TArrayC.h  TBits.h  TClassTable.h  TClonesArray.h  TCollection.h  TCollectionProxyInfo.h  TExMap.h  THashList.h  THashTable.h  TIterator.h  TList.h  TMap.h  TObjArray.h  TObjectTable.h  TOrdCollection.h  TSeqCollection.h  TSortedList.h  TVirtualCollectionProxy.h
cling/src/core/cont/src/: TArray.cxx  TArrayC.cxx  TBits.cxx  TClassTable.cxx  TClonesArray.cxx  TCollection.cxx  TExMap.cxx  THashList.cxx  THashTable.cxx  TIterator.cxx  TList.cxx  TMap.cxx  TObjArray.cxx  TObjectTable.cxx  TOrdCollection.cxx  TSeqCollection.cxx  TSortedList.cxx
cling/src/core/dictgen/: CMakeLists.txt
cling/src/core/dictgen/res/: BaseSelectionRule.h  ClassSelectionRule.h  DictSelectionReader.h  LinkdefReader.h  OptionParser.h  Scanner.h  SelectionRules.h  TModuleGenerator.h  VariableSelectionRule.h  XMLReader.h  rootcling_impl.h
cling/src/core/dictgen/src/: BaseSelectionRule.cxx  ClassSelectionRule.cxx  DictSelectionReader.cxx  LinkdefReader.cxx  Scanner.cxx  SelectionRules.cxx  TModuleGenerator.cxx  VariableSelectionRule.cxx  XMLReader.cxx  rootcling-argparse.py  rootcling_impl.cxx
cling/src/core/foundation/: CMakeLists.txt
cling/src/core/foundation/inc/: ESTLType.h  TClassEdit.h
cling/src/core/foundation/res/: RConversionRuleParser.h  TSchemaRuleProcessor.h  TSchemaType.h  TSpinLockGuard.h
cling/src/core/foundation/src/: FoundationUtils.cxx  RConversionRuleParser.cxx  TClassEdit.cxx
cling/src/core/meta/: CMakeLists.txt
cling/src/core/meta/inc/: LinkDef.h  RootMetaSelection.h  TBaseClass.h  TClass.h  TClassGenerator.h  TClassRef.h  TClassStreamer.h  TDataMember.h  TDataType.h  TDictAttributeMap.h  TDictionary.h  TEnum.h  TEnumConstant.h  TFunction.h  TFunctionTemplate.h  TGenericClassInfo.h  TGlobal.h  TInterpreter.h  TInterpreterValue.h  TIsAProxy.h  TListOfDataMembers.h  TListOfEnums.h  TListOfEnumsWithLock.h  TListOfFunctionTemplates.h  TListOfFunctions.h  TMemberStreamer.h  TMethod.h  TMethodArg.h  TProtoClass.h  TRealData.h  TSchemaHelper.h  TSchemaRule.h  TSchemaRuleSet.h  TStreamerElement.h  TVirtualIsAProxy.h  TVirtualStreamerInfo.h  capi.h  cpp_cppyy.h
cling/src/core/meta/src/: TBaseClass.cxx  TCheckHashRecursiveRemoveConsistency.h  (+32 more)
cling/src/core/metacling/: CMakeLists.txt
cling/src/core/rootcling_stage1/: CMakeLists.txt
cling/src/core/thread/: CMakeLists.txt
cling/src/core/winnt/: CMakeLists.txt
cling/src/etc/: Makefile.arch  class.rules  valgrind-root.supp
cling/src/etc/dictpch/: makepch.py
cling/src/io/: CMakeLists.txt
cling/src/io/io/: CMakeLists.txt
cling/src/main/: CMakeLists.txt
cling/src/main/src/: rootcling.cxx
(+150 files in other folders)
