[build-system]
requires = ["cmake", "setuptools", "wheel", "numpy"]

[tool.cibuildwheel]
archs = ["auto"]
build-frontend = "pip"
dependency-versions = "pinned"
build-verbosity = "1"
build = "cp39-*"

before-all = "python create_src_directory.py"


test-requires = []
test-command = 'python -c "import cppyy_backend"'

[tool.cibuildwheel.linux]
repair-wheel-command = ""
# repair-wheel-command = "LD_LIBRARY_PATH=$PWD/lib auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.9"

# mac-arm target is 10.15
[[tool.cibuildwheel.overrides]]
select = "*macos*{universal2,arm64}*"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }